[package]
name = "foxtive-ntex-multipart"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Library For Handling File Uploads Based on Ntex"
repository = "https://github.com/foxtive/foxtive-ntex"
authors = ["ahmard"]

[dependencies]
futures = "0.3"
ntex-multipart = "2.0"
ntex = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.44", default-features = false, features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["test-util", "macros"] }
