[package]
name = "foxtive-ntex"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Micro-Framework Based on Ntex"
repository = "https://github.com/foxtive/foxtive-ntex"
authors = ["ahmard"]

[features]
strum = ["dep:strum"]
static = ["dep:ntex-files"]
validator = ["dep:validator"]
database = ["foxtive/database"]
jwt = ["foxtive/jwt"]
multipart = ["foxtive-ntex-multipart"]
cache = ["foxtive/cache"]
cache-redis = ["cache", "foxtive/cache-redis"]
cache-in-memory = ["cache", "foxtive/cache-in-memory"]
cache-filesystem = ["cache", "foxtive/cache-filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
log = { version = "0.4.27" }
uuid = { version = "1.16.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
tokio = { version = "1.44.2", default-features = false }
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
serde_json = { version = "1.0.140", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
ntex = { workspace = true }
ntex-files = { version = "2.0.0", optional = true }
ntex-cors = { version = "2.0.0" }
validator = { version = "0.20.0", features = ["derive"], optional = true }
strum = { version = "0.27.1", optional = true, default-features = false }

foxtive = { version = "0.8.0" }
foxtive-ntex-multipart = { version = "0.2.1", optional = true }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["test-util", "macros"] }
