[package]
name = "foxtive-ntex"
version = "0.13.0"
edition = "2024"
license = "MIT"
description = "Micro-Framework Based on Ntex"
repository = "https://github.com/foxtive/foxtive-ntex"
authors = ["ahmard"]

[features]
strum = ["dep:strum"]
static = ["dep:ntex-files"]
validator = ["dep:validator"]
database = ["foxtive/database"]
jwt = ["foxtive/jwt", "dep:jsonwebtoken"]
multipart = ["foxtive-ntex-multipart"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
log = { version = "0.4.27" }
uuid = { version = "1.17.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
tokio = { version = "1.46.1", default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
serde_json = { version = "1.0.140", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
ntex = { workspace = true }
ntex-files = { version = "2.0.0", optional = true }
ntex-cors = { version = "2.0.0" }
jsonwebtoken = {version = "9.3.1", optional = true}
validator = { version = "0.20.0", features = ["derive"], optional = true }
strum = { version = "0.27.1", optional = true, default-features = false }

foxtive = { version = "0.12.0" }
foxtive-ntex-multipart = { version = "0.2.1", optional = true }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["test-util", "macros"] }
ntex = { version = "2.14.0", default-features = false, features = ["tokio"] }
