[package]
name = "foxtive-ntex"
version = "0.18.0"
edition = "2024"
license = "MIT"
description = "Micro-Framework Based on Ntex"
repository = "https://github.com/foxtive/foxtive-ntex"
authors = ["ahmard"]

[features]
strum = ["dep:strum"]
static = ["dep:ntex-files"]
validator = ["dep:validator"]
database = ["foxtive/database"]
jwt = ["foxtive/jwt", "dep:jsonwebtoken"]
multipart = ["foxtive-ntex-multipart"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
tracing = { version = "0.1.41" }
uuid = { version = "1.18.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
tokio = { version = "1.47.1", default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
serde_json = { version = "1.0.142", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
ntex = { workspace = true }
ntex-files = { version = "2.1.0", optional = true }
ntex-cors = { version = "2.1.0" }
jsonwebtoken = {version = "9.3.1", optional = true}
validator = { version = "0.20.0", features = ["derive"], optional = true }
strum = { version = "0.27.2", optional = true, default-features = false }

foxtive = { workspace = true }
foxtive-ntex-multipart = { version = "0", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["test-util", "macros"] }
ntex = { version = "2.15.1", default-features = false, features = ["tokio"] }
